--- a/index.html
+++ b/index.html
@@ -118,25 +118,27 @@
         </div>
       </section>
 
-      <!-- Affiliations Section -->
-      <section id="affiliations" data-aos="fade-up">
-        <h2 class="text-3xl font-bold mb-6">Industry Affiliations</h2>
-        <div class="logo-grid mb-10">
-          <img src="motherdairy.png" alt="Mother Dairy" />
-          <img src="hdfc.png" alt="HDFC Bank" />
-          <img src="zomato.png" alt="Zomato" />
-          <img src="indicold.png" alt="Indicold" />
-          <img src="unacademy.png" alt="Unacademy" />
-          <img src="tata.png" alt="Tata Trusts" />
-          <img src="tbl.png" alt="The Big League" />
-        </div>
-        <h2 class="text-3xl font-bold mb-6">Academic Affiliations</h2>
-        <div class="logo-grid">
-          <img src="irma.png" alt="IRMA" />
-          <img src="svpuat.png" alt="SVPUAT" />
-          <img src="illinois.png" alt="University of Illinois" />
-        </div>
-      </section>
+      <!-- Industry Affiliations -->
+<div class="logo-grid mb-10">
+  <img src="logo-mother-dairy.webp" alt="Mother Dairy" />
+  <img src="logo-hdfc-bank.jpeg" alt="HDFC Bank" />
+  <img src="logo-zomato.png" alt="Zomato" />
+  <img src="logo-indicold.webp" alt="Indicold" />
+  <img src="logo-unacademy.webp" alt="Unacademy" />
+  <img src="logo-tata-trusts.png" alt="Tata Trusts" />
+  <img src="logo-tbl.png" alt="The Big League" />
+</div>
+
+<!-- Academic Affiliations -->
+<div class="logo-grid">
+  <img src="logo-irma.png" alt="IRMA" />
+  <img src="logo-svpuat.png" alt="SVPUAT" />
+  <img src="logo-illinois.png" alt="University of Illinois" />
+</div>
+
+<!-- Profile Image -->
+<img src="profile.png" alt="Sachin Gupta" class="w-16 h-16 rounded-full border-2 border-white shadow-lg" />
+
 
       <!-- Contact -->
       <section id="contact" data-aos="fade-up">
