--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       }
       nav.sticky-nav {
         position: sticky;
-        top: 6rem; /* Space for profile + header */
+        top: 6rem;
         z-index: 40;
         background: linear-gradient(to right, #1a1a1a, #3a3a3a);
       }
@@ -43,14 +43,23 @@
       }
       .logo-grid {
         display: grid;
-        grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
-        gap: 1.5rem;
+        grid-template-columns: repeat(auto-fit, minmax(120px, 1fr));
+        gap: 2rem;
         justify-items: center;
         align-items: center;
       }
       .logo-grid img {
-        max-height: 50px;
-        filter: grayscale(100%) brightness(1.2);
+        max-height: 70px;
+        object-fit: contain;
+      }
+      header img.profile-pic {
+        object-fit: cover;
+        object-position: center;
+        width: 72px;
+        height: 72px;
+        border-radius: 9999px;
+        border: 2px solid white;
+        box-shadow: 0 0 10px rgba(255, 255, 255, 0.2);
       }
       @keyframes fadeIn {
         from { opacity: 0; }
@@ -67,7 +76,7 @@
           <p class="text-lg mt-1">Building financial products for B2B and B2C</p>
         </div>
         <div>
-          <img src="profile.png" alt="Sachin Gupta" class="w-16 h-16 rounded-full border-2 border-white shadow-lg" />
+          <img src="profile.png" alt="Sachin Gupta" class="profile-pic" />
         </div>
       </div>
     </header>
@@ -118,27 +127,25 @@
         </div>
       </section>
 
-      <!-- Industry Affiliations -->
-<div class="logo-grid mb-10">
-  <img src="logo-mother-dairy.webp" alt="Mother Dairy" />
-  <img src="logo-hdfc-bank.jpeg" alt="HDFC Bank" />
-  <img src="logo-zomato.png" alt="Zomato" />
-  <img src="logo-indicold.webp" alt="Indicold" />
-  <img src="logo-unacademy.webp" alt="Unacademy" />
-  <img src="logo-tata-trusts.png" alt="Tata Trusts" />
-  <img src="logo-tbl.png" alt="The Big League" />
-</div>
-
-<!-- Academic Affiliations -->
-<div class="logo-grid">
-  <img src="logo-irma.png" alt="IRMA" />
-  <img src="logo-svpuat.png" alt="SVPUAT" />
-  <img src="logo-illinois.png" alt="University of Illinois" />
-</div>
-
-<!-- Profile Image -->
-<img src="profile.png" alt="Sachin Gupta" class="w-16 h-16 rounded-full border-2 border-white shadow-lg" />
-
+      <!-- Affiliations Section -->
+      <section id="affiliations" data-aos="fade-up">
+        <h2 class="text-3xl font-bold mb-6">Industry Affiliations</h2>
+        <div class="logo-grid mb-10">
+          <img src="motherdairy.png" alt="Mother Dairy" />
+          <img src="hdfc.png" alt="HDFC Bank" />
+          <img src="zomato.png" alt="Zomato" />
+          <img src="indicold.png" alt="Indicold" />
+          <img src="unacademy.png" alt="Unacademy" />
+          <img src="tata.png" alt="Tata Trusts" />
+          <img src="tbl.png" alt="The Big League" />
+        </div>
+        <h2 class="text-3xl font-bold mb-6">Academic Affiliations</h2>
+        <div class="logo-grid">
+          <img src="irma.png" alt="IRMA" />
+          <img src="svpuat.png" alt="SVPUAT" />
+          <img src="illinois.png" alt="University of Illinois" />
+        </div>
+      </section>
 
       <!-- Contact -->
       <section id="contact" data-aos="fade-up">
