--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
       html {
         scroll-behavior: smooth;
       }
+
       header.hero {
         position: sticky;
         top: 0;
@@ -18,17 +19,20 @@
         background: linear-gradient(to right, #1a1a1a, #3a3a3a);
         color: white;
       }
+
       nav.sticky-nav {
         position: sticky;
         top: 6rem;
         z-index: 40;
         background: linear-gradient(to right, #1a1a1a, #3a3a3a);
       }
+
       body {
         background: linear-gradient(to bottom, #1a1a1a, #2e2e2e);
         color: white;
         animation: fadeIn 1s ease-in-out;
       }
+
       .project-box {
         background: rgba(255, 255, 255, 0.05);
         backdrop-filter: blur(10px);
@@ -37,36 +41,40 @@
         padding: 2rem;
         transition: transform 0.3s ease;
       }
+
       .project-box:hover {
         transform: translateY(-5px) scale(1.02);
         box-shadow: 0 8px 24px rgba(0, 0, 0, 0.2);
       }
+
       .logo-grid {
         display: grid;
-        grid-template-columns: repeat(auto-fit, minmax(120px, 1fr));
-        gap: 2rem;
+        grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
+        gap: 1.5rem;
         justify-items: center;
         align-items: center;
       }
+
       .logo-grid img {
-        max-height: 70px;
-        object-fit: contain;
+        max-height: 60px;
+        transition: transform 0.3s ease;
       }
-      header img.profile-pic {
-        object-fit: cover;
-        object-position: center;
-        width: 72px;
-        height: 72px;
-        border-radius: 9999px;
-        border: 2px solid white;
-        box-shadow: 0 0 10px rgba(255, 255, 255, 0.2);
+
+      .logo-grid img:hover {
+        transform: scale(1.1);
       }
+
       @keyframes fadeIn {
-        from { opacity: 0; }
-        to { opacity: 1; }
+        from {
+          opacity: 0;
+        }
+        to {
+          opacity: 1;
+        }
       }
     </style>
   </head>
+
   <body class="font-sans">
     <!-- Sticky Header -->
     <header class="hero py-6 px-8 shadow-md">
@@ -76,7 +84,7 @@
           <p class="text-lg mt-1">Building financial products for B2B and B2C</p>
         </div>
         <div>
-          <img src="profile.png" alt="Sachin Gupta" class="profile-pic" />
+          <img src="profile.png" alt="Sachin Gupta" class="w-16 h-16 object-cover rounded-full border-2 border-white shadow-lg" />
         </div>
       </div>
     </header>
