--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
           <p class="text-lg mt-1">Building financial products for B2B and B2C</p>
         </div>
         <div>
-          <img src="profile.png" alt="Sachin Gupta" class="w-16 h-16 object-cover rounded-full border-2 border-white shadow-lg" />
+          <img src="profile.jpeg" alt="Sachin Gupta" class="w-16 h-16 object-cover rounded-full border-2 border-white shadow-lg" />
         </div>
       </div>
     </header>
@@ -139,19 +139,19 @@
       <section id="affiliations" data-aos="fade-up">
         <h2 class="text-3xl font-bold mb-6">Industry Affiliations</h2>
         <div class="logo-grid mb-10">
-          <img src="motherdairy.png" alt="Mother Dairy" />
-          <img src="hdfc.png" alt="HDFC Bank" />
-          <img src="zomato.png" alt="Zomato" />
-          <img src="indicold.png" alt="Indicold" />
-          <img src="unacademy.png" alt="Unacademy" />
-          <img src="tata.png" alt="Tata Trusts" />
+          <img src="logo-mother-dairy.webp" alt="Mother Dairy" />
+          <img src="logo-hdfc-bank.jpeg" alt="HDFC Bank" />
+          <img src="logo-zomato.png" alt="Zomato" />
+          <img src="logo-indicold.png" alt="Indicold" />
+          <img src="logo-unacademy.png" alt="Unacademy" />
+          <img src="logo-tata-trusts.png" alt="Tata Trusts" />
           <img src="tbl.png" alt="The Big League" />
         </div>
         <h2 class="text-3xl font-bold mb-6">Academic Affiliations</h2>
         <div class="logo-grid">
           <img src="irma.png" alt="IRMA" />
-          <img src="svpuat.png" alt="SVPUAT" />
-          <img src="illinois.png" alt="University of Illinois" />
+          <img src="logo-svpuat.jpeg" alt="SVPUAT" />
+          <img src="logo-university-illinois.png" alt="University of Illinois" />
         </div>
       </section>
 
