--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
 
       <!-- Affiliations Section -->
       <section id="affiliations" data-aos="fade-up">
-        <h2 class="text-3xl font-bold mb-6">Industry Affiliations</h2>
+        <h2 class="text-3xl font-bold mb-6">Past Industry Affiliations</h2>
         <div class="logo-grid mb-10">
           <img src="logo-mother-dairy.webp" alt="Mother Dairy" />
           <img src="logo-hdfc-bank.jpeg" alt="HDFC Bank" />
@@ -145,7 +145,7 @@
           <img src="logo-indicold.png" alt="Indicold" />
           <img src="logo-unacademy.png" alt="Unacademy" />
           <img src="logo-tata-trusts.png" alt="Tata Trusts" />
-          <img src="tbl.png" alt="The Big League" />
+          <img src="logo-big-leaguepng" alt="The Big League" />
         </div>
         <h2 class="text-3xl font-bold mb-6">Academic Affiliations</h2>
         <div class="logo-grid">
@@ -158,7 +158,7 @@
       <!-- Contact -->
       <section id="contact" data-aos="fade-up">
         <h2 class="text-3xl font-bold mb-4">Contact</h2>
-        <p>Feel free to connect with me on <a href="https://www.linkedin.com/in/sachin-gupta-4b9a7b104/" class="text-blue-400 underline">LinkedIn</a>.</p>
+        <p>Feel free to connect with me on <a href="https://www.linkedin.com/in/sachinguptanxt/" class="text-blue-400 underline">LinkedIn</a>.</p>
       </section>
 
       <!-- Resume -->
