--- a/index.html
+++ b/index.html
@@ -139,13 +139,13 @@
       <section id="affiliations" data-aos="fade-up">
         <h2 class="text-3xl font-bold mb-6">Past Industry Affiliations</h2>
         <div class="logo-grid mb-10">
-          <img src="logo-hdfc-bank.jpeg" alt="HDFC Bank" class="w-24 h-24" />
-          <img src="logo-mother-dairy.webp" alt="Mother Dairy" class="w-24 h-24" />
-          <img src="logo-zomato.png" alt="Zomato" class="w-24 h-24" />
-          <img src="logo-indicold.png" alt="Indicold" class="w-24 h-24" />
-          <img src="logo-unacademy.png" alt="Unacademy" class="w-24 h-24" />
-          <img src="logo-tata-trusts.png" alt="Tata Trusts" class="w-24 h-24" />
-          <img src="logo-big-league.png" alt="The Big League" class="w-24 h-24" />
+          <img src="logo-hdfc-bank.jpeg" alt="HDFC Bank" />
+          <img src="logo-mother-dairy.webp" alt="Mother Dairy" />
+          <img src="logo-zomato.png" alt="Zomato" />
+          <img src="logo-indicold.png" alt="Indicold" />
+          <img src="logo-unacademy.png" alt="Unacademy" />
+          <img src="logo-tata-trusts.png" alt="Tata Trusts" />
+          <img src="logo-big-league.png" alt="The Big League" />
         </div>
         <h2 class="text-3xl font-bold mb-6">Academic Affiliations</h2>
         <div class="logo-grid">
