--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
       html {
         scroll-behavior: smooth;
       }
-
       header.hero {
         position: sticky;
         top: 0;
@@ -19,20 +18,20 @@
         background: linear-gradient(to right, #1a1a1a, #3a3a3a);
         color: white;
       }
-
       nav.sticky-nav {
         position: sticky;
-        top: 6rem;
+        top: 80px;
         z-index: 40;
         background: linear-gradient(to right, #1a1a1a, #3a3a3a);
       }
-
-      body {
+      body.dark {
         background: linear-gradient(to bottom, #1a1a1a, #2e2e2e);
         color: white;
-        animation: fadeIn 1s ease-in-out;
       }
-
+      body.light {
+        background: linear-gradient(to bottom, #ffffff, #f5f5f5);
+        color: black;
+      }
       .project-box {
         background: rgba(255, 255, 255, 0.05);
         backdrop-filter: blur(10px);
@@ -41,41 +40,28 @@
         padding: 2rem;
         transition: transform 0.3s ease;
       }
-
       .project-box:hover {
         transform: translateY(-5px) scale(1.02);
         box-shadow: 0 8px 24px rgba(0, 0, 0, 0.2);
       }
-
       .logo-grid {
         display: grid;
-        grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
+        grid-template-columns: repeat(auto-fill, minmax(120px, 1fr));
         gap: 1.5rem;
         justify-items: center;
         align-items: center;
       }
-
       .logo-grid img {
-        max-height: 60px;
+        max-height: 80px;
         transition: transform 0.3s ease;
       }
-
       .logo-grid img:hover {
         transform: scale(1.1);
-      }
-
-      @keyframes fadeIn {
-        from {
-          opacity: 0;
-        }
-        to {
-          opacity: 1;
-        }
+        filter: none;
       }
     </style>
   </head>
-
-  <body class="font-sans">
+  <body class="dark font-sans">
     <!-- Sticky Header -->
     <header class="hero py-6 px-8 shadow-md">
       <div class="max-w-7xl mx-auto flex justify-between items-center">
@@ -84,25 +70,30 @@
           <p class="text-lg mt-1">Building financial products for B2B and B2C</p>
         </div>
         <div>
-          <img src="profile.jpeg" alt="Sachin Gupta" class="w-16 h-16 object-cover rounded-full border-2 border-white shadow-lg" />
+          <img src="profile.jpeg" alt="Sachin Gupta" class="w-16 h-16 rounded-full border-2 border-white shadow-lg object-cover" />
         </div>
       </div>
     </header>
 
     <!-- Sticky Navigation -->
     <nav class="sticky-nav shadow-md py-3 px-4 text-white">
-      <div class="max-w-4xl mx-auto flex justify-center space-x-6 text-lg">
-        <a href="#about" class="hover:text-blue-400">About</a>
-        <a href="#projects" class="hover:text-blue-400">Projects</a>
-        <a href="#affiliations" class="hover:text-blue-400">Affiliations</a>
-        <a href="#contact" class="hover:text-blue-400">Contact</a>
-        <a href="#resume" class="hover:text-blue-400">Resume</a>
+      <div class="max-w-4xl mx-auto flex justify-between items-center">
+        <div class="lg:hidden">
+          <button id="hamburger" class="text-white text-2xl">&#9776;</button>
+        </div>
+        <div id="mobile-menu" class="lg:flex hidden space-x-6 text-lg">
+          <a href="#about" class="hover:text-blue-400">About</a>
+          <a href="#projects" class="hover:text-blue-400">Projects</a>
+          <a href="#affiliations" class="hover:text-blue-400">Affiliations</a>
+          <a href="#contact" class="hover:text-blue-400">Contact</a>
+          <a href="#resume" class="hover:text-blue-400">Resume</a>
+        </div>
+        <button id="theme-toggle" class="text-white text-sm px-4 py-2 border rounded-full ml-4">Toggle Theme</button>
       </div>
     </nav>
 
     <!-- Main Content -->
     <main class="max-w-4xl mx-auto px-6 py-12 space-y-20">
-      <!-- About Section -->
       <section id="about" data-aos="fade-up">
         <h2 class="text-3xl font-bold mb-4">About</h2>
         <p>
@@ -110,7 +101,6 @@
         </p>
       </section>
 
-      <!-- Projects Section -->
       <section id="projects" data-aos="fade-up">
         <h2 class="text-3xl font-bold mb-8">Projects</h2>
         <div class="space-y-6">
@@ -135,17 +125,16 @@
         </div>
       </section>
 
-      <!-- Affiliations Section -->
       <section id="affiliations" data-aos="fade-up">
-        <h2 class="text-3xl font-bold mb-6">Past Industry Affiliations</h2>
+        <h2 class="text-3xl font-bold mb-6">Industry Affiliations</h2>
         <div class="logo-grid mb-10">
+          <img src="logo-motherdairy.webp" alt="Mother Dairy" />
           <img src="logo-hdfc-bank.jpeg" alt="HDFC Bank" />
-          <img src="logo-mother-dairy.webp" alt="Mother Dairy" />
           <img src="logo-zomato.png" alt="Zomato" />
           <img src="logo-indicold.png" alt="Indicold" />
           <img src="logo-unacademy.png" alt="Unacademy" />
           <img src="logo-tata-trusts.png" alt="Tata Trusts" />
-          <img src="logo-big-league.png" alt="The Big League" />
+          <img src="logo-big-leaague.png" alt="The Big League" />
         </div>
         <h2 class="text-3xl font-bold mb-6">Academic Affiliations</h2>
         <div class="logo-grid">
@@ -155,13 +144,11 @@
         </div>
       </section>
 
-      <!-- Contact -->
       <section id="contact" data-aos="fade-up">
         <h2 class="text-3xl font-bold mb-4">Contact</h2>
         <p>Feel free to connect with me on <a href="https://www.linkedin.com/in/sachinguptanxt/" class="text-blue-400 underline">LinkedIn</a>.</p>
       </section>
 
-      <!-- Resume -->
       <section id="resume" data-aos="fade-up">
         <h2 class="text-3xl font-bold mb-4">Resume</h2>
         <a href="Sachin Gupta_ Product.pdf" download class="text-blue-400 underline">Download Resume</a>
@@ -173,11 +160,29 @@
     </footer>
 
     <script>
-      AOS.init({
-        duration: 1000,
-        easing: 'ease-in-out',
-        once: true,
-        mirror: false
+      AOS.init({ duration: 1000, easing: 'ease-in-out', once: true });
+
+      const themeToggleButton = document.getElementById("theme-toggle");
+      const currentTheme = localStorage.getItem("theme") || "dark";
+      document.body.classList.add(currentTheme);
+
+      themeToggleButton.addEventListener("click", () => {
+        if (document.body.classList.contains("dark")) {
+          document.body.classList.remove("dark");
+          document.body.classList.add("light");
+          localStorage.setItem("theme", "light");
+        } else {
+          document.body.classList.remove("light");
+          document.body.classList.add("dark");
+          localStorage.setItem("theme", "dark");
+        }
+      });
+
+      const hamburgerButton = document.getElementById("hamburger");
+      const mobileMenu = document.getElementById("mobile-menu");
+
+      hamburgerButton.addEventListener("click", () => {
+        mobileMenu.classList.toggle("hidden");
       });
     </script>
   </body>
