--- a/index.html
+++ b/index.html
@@ -128,13 +128,13 @@
       <section id="affiliations" data-aos="fade-up">
         <h2 class="text-3xl font-bold mb-6">Industry Affiliations</h2>
         <div class="logo-grid mb-10">
-          <img src="logo-motherdairy.webp" alt="Mother Dairy" />
+          <img src="logo-mother-dairy.webp" alt="Mother Dairy" />
           <img src="logo-hdfc-bank.jpeg" alt="HDFC Bank" />
           <img src="logo-zomato.png" alt="Zomato" />
           <img src="logo-indicold.png" alt="Indicold" />
           <img src="logo-unacademy.png" alt="Unacademy" />
           <img src="logo-tata-trusts.png" alt="Tata Trusts" />
-          <img src="logo-big-leaague.png" alt="The Big League" />
+          <img src="logo-big-league.png" alt="The Big League" />
         </div>
         <h2 class="text-3xl font-bold mb-6">Academic Affiliations</h2>
         <div class="logo-grid">
