--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
           <p class="text-lg mt-1">Building financial products for B2B and B2C</p>
         </div>
         <div>
-          <img src="profile.jpeg" alt="Sachin Gupta" class="w-16 h-16 rounded-full border-2 border-white shadow-lg object-cover" />
+          <img src="profile.png" alt="Sachin Gupta" class="w-16 h-16 rounded-full border-2 border-white shadow-lg object-cover" />
         </div>
       </div>
     </header>
@@ -88,7 +88,13 @@
           <a href="#contact" class="hover:text-blue-400">Contact</a>
           <a href="#resume" class="hover:text-blue-400">Resume</a>
         </div>
-        <button id="theme-toggle" class="text-white text-sm px-4 py-2 border rounded-full ml-4">Toggle Theme</button>
+        <button id="theme-toggle" class="text-white text-sm px-4 py-2 border rounded-full ml-4 flex items-center space-x-2">
+  <span id="theme-icon" class="material-icons">dark_mode</span>
+  <span>Toggle Theme</span>
+</button>
+
+<script src="https://cdn.jsdelivr.net/npm/@material-icons/font/css/material-icons.css"></script>
+
       </div>
     </nav>
 
@@ -122,6 +128,12 @@
             <p class="mt-2 font-semibold">Outcome:</p>
             <p>Helped the bank stay compliant with RBI PSL mandates and reduce manual intervention.</p>
           </div>
+          <div class="project-box">
+            <h3 class="text-xl font-bold">Product Strategy at AIC-IL</h3>
+            <p>Developed a product strategy for a cold-chain agri supply chain startup. Conducted market research, built customer personas, and refined business and revenue models to align with rural supply chain needs.</p>
+            <p class="mt-2 font-semibold">Outcome:</p>
+            <p>Enabled fundraising and product-market fit in the institutional buyer segment.</p>
+          </div>
         </div>
       </section>
 
@@ -134,12 +146,12 @@
           <img src="logo-indicold.png" alt="Indicold" />
           <img src="logo-unacademy.png" alt="Unacademy" />
           <img src="logo-tata-trusts.png" alt="Tata Trusts" />
-          <img src="logo-big-league.png" alt="The Big League" />
+          <img src="logo-big-league.jpeg" alt="The Big League" />
         </div>
         <h2 class="text-3xl font-bold mb-6">Academic Affiliations</h2>
         <div class="logo-grid">
           <img src="irma.png" alt="IRMA" />
-          <img src="logo-svpuat.jpeg" alt="SVPUAT" />
+          <img src="logo-svpuat.png" alt="SVPUAT" />
           <img src="logo-university-illinois.png" alt="University of Illinois" />
         </div>
       </section>
