--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
           <p class="text-lg mt-1">Building financial products for B2B and B2C</p>
         </div>
         <div>
-          <img src="profile.png" alt="Sachin Gupta" class="w-16 h-16 rounded-full border-2 border-white shadow-lg object-cover" />
+          <img src="profile.jpeg" alt="Sachin Gupta" class="w-16 h-16 rounded-full border-2 border-white shadow-lg object-cover" />
         </div>
       </div>
     </header>
@@ -151,7 +151,7 @@
         <h2 class="text-3xl font-bold mb-6">Academic Affiliations</h2>
         <div class="logo-grid">
           <img src="irma.png" alt="IRMA" />
-          <img src="logo-svpuat.png" alt="SVPUAT" />
+          <img src="logo-svpuat.jpeg" alt="SVPUAT" />
           <img src="logo-university-illinois.png" alt="University of Illinois" />
         </div>
       </section>
