--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
           <a href="#resume" class="hover:text-blue-400">Resume</a>
         </div>
         <button id="theme-toggle" class="text-white text-sm px-4 py-2 border rounded-full ml-4 flex items-center space-x-2">
-  <span id="theme-icon" class="material-icons">dark_mode</span>
+  <span id="theme-icon" class="material-icons"></span>
   <span>Toggle Theme</span>
 </button>
 
