--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
           <img src="logo-indicold.png" alt="Indicold" />
           <img src="logo-unacademy.png" alt="Unacademy" />
           <img src="logo-tata-trusts.png" alt="Tata Trusts" />
-          <img src="logo-big-league.jpeg" alt="The Big League" />
+          <img src="logo-big-league.png" alt="The Big League" />
         </div>
         <h2 class="text-3xl font-bold mb-6">Academic Affiliations</h2>
         <div class="logo-grid">
