--- a/index.html
+++ b/index.html
@@ -81,12 +81,12 @@
         <div class="lg:hidden">
           <button id="hamburger" class="text-white text-2xl">&#9776;</button>
         </div>
-        <div id="mobile-menu" class="lg:flex hidden flex-col lg:flex-row lg:space-x-6 space-y-4 text-lg bg-gray-800 lg:bg-transparent p-4 rounded-md absolute top-full left-0 w-full lg:static z-40">
-          <a href="#about" class="hover:text-blue-400">About</a>
-          <a href="#projects" class="hover:text-blue-400">Projects</a>
-          <a href="#affiliations" class="hover:text-blue-400">Affiliations</a>
-          <a href="#contact" class="hover:text-blue-400">Contact</a>
-          <a href="#resume" class="hover:text-blue-400">Resume</a>
+<div id="mobile-menu" class="lg:flex hidden flex-col lg:flex-row lg:space-x-6 space-y-4 text-lg bg-gradient-to-r from-gray-900 to-gray-800/95 backdrop-blur-sm lg:bg-transparent p-6 rounded-b-xl absolute top-full left-0 w-full lg:static z-40 text-white shadow-lg">
+          <a href="#about" class="hover:text-blue-400 transition-colors">About</a>
+          <a href="#projects" class="hover:text-blue-400 transition-colors">Projects</a>
+          <a href="#affiliations" class="hover:text-blue-400 transition-colors">Affiliations</a>
+          <a href="#contact" class=""hover:text-blue-400 transition-colors">Contact</a>
+          <a href="#resume" class="hover:text-blue-400 transition-colors">Resume</a>
         </div>
         <button id="theme-toggle" class="text-white text-sm px-4 py-2 border rounded-full ml-4 flex items-center space-x-2">
   <span id="theme-icon" class="material-icons"></span>
