--- a/index.html
+++ b/index.html
@@ -89,10 +89,11 @@
 <a href="#resume" class="hover:text-blue-400 transition-colors duration-200 ease-in-out">Resume</a>
 
         </div>
-        <button id="theme-toggle" class="text-white text-sm px-4 py-2 border rounded-full ml-4 flex items-center space-x-2">
-  <span id="theme-icon" class="material-icons"></span>
-  <span>Toggle Theme</span>
+        <button id="theme-toggle" class="bg-gray-800 text-white px-4 py-2 rounded-full hover:bg-gray-700 transition flex items-center">
+  <span id="theme-icon" class="material-icons">dark_mode</span>
+  <span class="ml-2">Toggle Theme</span>
 </button>
+
 
 <script src="https://cdn.jsdelivr.net/npm/@material-icons/font/css/material-icons.css"></script>
 
