--- a/index.html
+++ b/index.html
@@ -8,58 +8,27 @@
     <script src="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.js"></script>
     <link href="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.css" rel="stylesheet" />
     <style>
-      html {
-        scroll-behavior: smooth;
-      }
-      header.hero {
-        position: sticky;
-        top: 0;
-        z-index: 50;
-        background: linear-gradient(to right, #1a1a1a, #3a3a3a);
-        color: white;
-      }
-      nav.sticky-nav {
-        position: sticky;
-        top: 80px;
-        z-index: 40;
-        background: linear-gradient(to right, #1a1a1a, #3a3a3a);
-      }
-      body.dark {
-        background: linear-gradient(to bottom, #1a1a1a, #2e2e2e);
-        color: white;
-      }
-      body.light {
-        background: linear-gradient(to bottom, #ffffff, #f5f5f5);
-        color: black;
-      }
-      .project-box {
-        background: rgba(255, 255, 255, 0.05);
-        backdrop-filter: blur(10px);
-        border: 1px solid rgba(255, 255, 255, 0.1);
-        border-radius: 1rem;
-        padding: 2rem;
-        transition: transform 0.3s ease;
-      }
-      .project-box:hover {
-        transform: translateY(-5px) scale(1.02);
-        box-shadow: 0 8px 24px rgba(0, 0, 0, 0.2);
-      }
-      .logo-grid {
-        display: grid;
-        grid-template-columns: repeat(auto-fill, minmax(120px, 1fr));
-        gap: 1.5rem;
-        justify-items: center;
-        align-items: center;
-      }
-      .logo-grid img {
-        max-height: 80px;
-        transition: transform 0.3s ease;
-      }
-      .logo-grid img:hover {
-        transform: scale(1.1);
-        filter: none;
-      }
-    </style>
+  /* Default link color for dark theme */
+  nav.sticky-nav a {
+    color: rgba(255, 255, 255, 0.8); /* Slightly dimmed white color */
+  }
+
+  /* Hover effect to be subtle on dark background */
+  nav.sticky-nav a:hover {
+    color: rgba(255, 255, 255, 1); /* Full white on hover */
+  }
+
+  /* Default link color for mobile menu */
+  #mobile-menu a {
+    color: rgba(255, 255, 255, 0.8); /* Slightly dimmed white color */
+  }
+
+  /* Hover effect for mobile menu */
+  #mobile-menu a:hover {
+    color: rgba(255, 255, 255, 1); /* Full white on hover */
+  }
+</style>
+
   </head>
   <body class="dark font-sans">
     <!-- Sticky Header -->
