--- a/index.html
+++ b/index.html
@@ -2,47 +2,62 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>Sachin Gupta - Product Manager</title>
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet" />
     <script src="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.js"></script>
     <link href="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.css" rel="stylesheet" />
-    <!-- Google Fonts - Poppins -->
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+
     <style>
-      /* Apply Poppins font */
       body {
         font-family: 'Poppins', sans-serif;
+        transition: background-color 0.3s, color 0.3s;
       }
 
-      /* Update for text color */
       body.dark {
-        color: #e5e5e5; /* Light text color for dark mode */
+        background-color: #111827; /* Proper dark background */
+        color: #e5e5e5;             /* Light text for dark mode */
       }
 
-      /* Ensure the links are easily visible in dark mode */
-      a, nav.sticky-nav a {
-        color: rgba(255, 255, 255, 0.8); /* Slightly dimmed white for links */
+      body.light {
+        background-color: #ffffff; /* Light background */
+        color: #111827;             /* Dark text for light mode */
       }
 
-      /* On hover, make the text fully white */
-      a:hover, nav.sticky-nav a:hover {
-        color: rgba(255, 255, 255, 1);
+      nav.sticky-nav a {
+        transition: color 0.3s;
       }
 
-      /* Sticky header styling */
+      nav.sticky-nav a:hover {
+        color: #ffffff;
+      }
+
       header {
-        background-color: #1f2937; /* Dark gray header */
+        background-color: #1f2937;
       }
 
-      /* Remove blue color from hamburger */
       #hamburger {
         color: white;
+      }
+
+      /* Resize affiliation logos */
+      .logo-grid img {
+        height: 60px;
+        object-fit: contain;
+        margin: 0.5rem;
+      }
+
+      .logo-grid {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+        align-items: center;
       }
     </style>
   </head>
   <body class="dark font-sans">
-    <!-- Sticky Header -->
+    <!-- HEADER -->
     <header class="hero py-6 px-8 shadow-md">
       <div class="max-w-7xl mx-auto flex justify-between items-center">
         <div>
@@ -50,23 +65,23 @@
           <p class="text-lg mt-1 text-white">Building financial products for B2B and B2C</p>
         </div>
         <div>
-          <img src="profile.jpeg" alt="Sachin Gupta" class="w-16 h-16 rounded-full border-2 border-white shadow-lg object-cover" />
+          <img src="profile.jpeg" alt="Sachin Gupta" class="w-16 h-16 rounded-full border-2 border-white shadow-lg object-cover"/>
         </div>
       </div>
     </header>
 
-    <!-- Sticky Navigation -->
+    <!-- NAVIGATION -->
     <nav class="sticky-nav shadow-md py-3 px-4 text-white relative">
       <div class="max-w-4xl mx-auto flex justify-between items-center relative">
         <div class="lg:hidden">
           <button id="hamburger" class="text-white text-2xl">&#9776;</button>
         </div>
         <div id="mobile-menu" class="lg:flex hidden flex-col lg:flex-row lg:space-x-6 space-y-4 text-lg bg-gradient-to-r from-gray-900 to-gray-800/95 backdrop-blur-sm lg:bg-transparent p-6 rounded-b-xl absolute top-full left-0 w-full lg:static z-40 text-white shadow-lg">
-          <a href="#about" class="hover:text-white transition-colors duration-200 ease-in-out">About</a>
-          <a href="#projects" class="hover:text-white transition-colors duration-200 ease-in-out">Projects</a>
-          <a href="#affiliations" class="hover:text-white transition-colors duration-200 ease-in-out">Affiliations</a>
-          <a href="#contact" class="hover:text-white transition-colors duration-200 ease-in-out">Contact</a>
-          <a href="#resume" class="hover:text-white transition-colors duration-200 ease-in-out">Resume</a>
+          <a href="#about">About</a>
+          <a href="#projects">Projects</a>
+          <a href="#affiliations">Affiliations</a>
+          <a href="#contact">Contact</a>
+          <a href="#resume">Resume</a>
         </div>
         <button id="theme-toggle" class="bg-gray-800 text-white px-4 py-2 rounded-full hover:bg-gray-700 transition flex items-center">
           <span id="theme-icon" class="material-icons">dark_mode</span>
@@ -75,18 +90,17 @@
       </div>
     </nav>
 
-    <!-- Main Content -->
+    <!-- MAIN -->
     <main class="max-w-4xl mx-auto px-6 py-12 space-y-20">
       <section id="about" data-aos="fade-up">
         <h2 class="text-3xl font-bold mb-4">About</h2>
-        <p>
-          I am a Product Manager with experience in building financial products for both B2B and B2C segments. With a background in Finance and Technology, I specialize in designing scalable systems and seamless user experiences.
-        </p>
+        <p>I am a Product Manager with experience in building financial products for both B2B and B2C segments. With a background in Finance and Technology, I specialize in designing scalable systems and seamless user experiences.</p>
       </section>
 
       <section id="projects" data-aos="fade-up">
         <h2 class="text-3xl font-bold mb-8">Projects</h2>
         <div class="space-y-6">
+          <!-- Each Project Box -->
           <div class="project-box">
             <h3 class="text-xl font-bold">UIDAI eKYC Integration</h3>
             <p>Integrated UIDAI’s eKYC API into the bank’s onboarding flow for real-time borrower authentication. Led API design, built secure ADV storage, and overcame regulatory and data mapping challenges.</p>
@@ -125,6 +139,7 @@
           <img src="logo-tata-trusts.png" alt="Tata Trusts" />
           <img src="logo-big-league.png" alt="The Big League" />
         </div>
+
         <h2 class="text-3xl font-bold mb-6">Academic Affiliations</h2>
         <div class="logo-grid">
           <img src="irma.png" alt="IRMA" />
@@ -135,35 +150,34 @@
 
       <section id="contact" data-aos="fade-up">
         <h2 class="text-3xl font-bold mb-4">Contact</h2>
-        <p>Feel free to connect with me on <a href="https://www.linkedin.com/in/sachinguptanxt/" class="text-white underline">LinkedIn</a>.</p>
+        <p>Feel free to connect with me on <a href="https://www.linkedin.com/in/sachinguptanxt/" class="underline">LinkedIn</a>.</p>
       </section>
 
       <section id="resume" data-aos="fade-up">
         <h2 class="text-3xl font-bold mb-4">Resume</h2>
-        <a href="Sachin Gupta_ Product.pdf" download class="text-white underline">Download Resume</a>
+        <a href="Sachin Gupta_ Product.pdf" download class="underline">Download Resume</a>
       </section>
     </main>
 
+    <!-- FOOTER -->
     <footer class="bg-black text-white py-6 text-center">
       &copy; 2025 Sachin Gupta. All rights reserved.
     </footer>
 
+    <!-- JS for Theme & Menu -->
     <script>
       AOS.init({ duration: 1000, easing: 'ease-in-out', once: true });
 
-      // Theme toggle functionality
       const themeToggleButton = document.getElementById("theme-toggle");
       const currentTheme = localStorage.getItem("theme") || "dark";
       document.body.classList.add(currentTheme);
 
       themeToggleButton.addEventListener("click", () => {
         if (document.body.classList.contains("dark")) {
-          document.body.classList.remove("dark");
-          document.body.classList.add("light");
+          document.body.classList.replace("dark", "light");
           localStorage.setItem("theme", "light");
         } else {
-          document.body.classList.remove("light");
-          document.body.classList.add("dark");
+          document.body.classList.replace("light", "dark");
           localStorage.setItem("theme", "dark");
         }
       });
