--- a/index.html
+++ b/index.html
@@ -98,35 +98,40 @@
       </section>
 
       <section id="projects" data-aos="fade-up">
-        <h2 class="text-3xl font-bold mb-8">Projects</h2>
-        <div class="space-y-6">
-          <!-- Each Project Box -->
-          <div class="project-box">
-            <h3 class="text-xl font-bold">UIDAI eKYC Integration</h3>
-            <p>Integrated UIDAI’s eKYC API into the bank’s onboarding flow for real-time borrower authentication. Led API design, built secure ADV storage, and overcame regulatory and data mapping challenges.</p>
-            <p class="mt-2 font-semibold">Outcome:</p>
-            <p>Enabled the bank’s first vertical using UIDAI API, saving over ₹12L annually.</p>
-          </div>
-          <div class="project-box">
-            <h3 class="text-xl font-bold">Decommissioning Legacy LOS</h3>
-            <p>Spearheaded the redesign of a rigid LOS into a modular platform integrated with LMS, Collection, and API systems. Created data flows, screens, and a new BRE to handle complex loan logic.</p>
-            <p class="mt-2 font-semibold">Outcome:</p>
-            <p>Delivered a flexible, modern lending system—reduced tech debt and enabled faster launches.</p>
-          </div>
-          <div class="project-box">
-            <h3 class="text-xl font-bold">Managing Government Business</h3>
-            <p>Led internal systems to support government lending programs like NRLM, NULM, and SHG. Improved PSL tracking and SMF categorization.</p>
-            <p class="mt-2 font-semibold">Outcome:</p>
-            <p>Helped the bank stay compliant with RBI PSL mandates and reduce manual intervention.</p>
-          </div>
-          <div class="project-box">
-            <h3 class="text-xl font-bold">Product Strategy at AIC-IL</h3>
-            <p>Developed a product strategy for a cold-chain agri supply chain startup. Conducted market research, built customer personas, and refined business and revenue models to align with rural supply chain needs.</p>
-            <p class="mt-2 font-semibold">Outcome:</p>
-            <p>Enabled fundraising and product-market fit in the institutional buyer segment.</p>
-          </div>
-        </div>
-      </section>
+  <h2 class="text-3xl font-bold mb-8">Projects</h2>
+  <div class="grid gap-6 md:grid-cols-2">
+    
+    <div class="bg-white dark:bg-gray-800 p-6 rounded-2xl shadow-lg transform transition duration-300 hover:shadow-2xl hover:scale-[1.02]" data-aos="fade-up">
+      <h3 class="text-xl font-bold text-gray-900 dark:text-white mb-2">UIDAI eKYC Integration</h3>
+      <p class="text-gray-700 dark:text-gray-300">Integrated UIDAI’s eKYC API into the bank’s onboarding flow for real-time borrower authentication. Led API design, built secure ADV storage, and overcame regulatory and data mapping challenges.</p>
+      <p class="mt-2 font-semibold text-gray-900 dark:text-white">Outcome:</p>
+      <p class="text-gray-700 dark:text-gray-300">Enabled the bank’s first vertical using UIDAI API, saving over ₹12L annually.</p>
+    </div>
+
+    <div class="bg-white dark:bg-gray-800 p-6 rounded-2xl shadow-lg transform transition duration-300 hover:shadow-2xl hover:scale-[1.02]" data-aos="fade-up" data-aos-delay="100">
+      <h3 class="text-xl font-bold text-gray-900 dark:text-white mb-2">Decommissioning Legacy LOS</h3>
+      <p class="text-gray-700 dark:text-gray-300">Spearheaded the redesign of a rigid LOS into a modular platform integrated with LMS, Collection, and API systems. Created data flows, screens, and a new BRE to handle complex loan logic.</p>
+      <p class="mt-2 font-semibold text-gray-900 dark:text-white">Outcome:</p>
+      <p class="text-gray-700 dark:text-gray-300">Delivered a flexible, modern lending system—reduced tech debt and enabled faster launches.</p>
+    </div>
+
+    <div class="bg-white dark:bg-gray-800 p-6 rounded-2xl shadow-lg transform transition duration-300 hover:shadow-2xl hover:scale-[1.02]" data-aos="fade-up" data-aos-delay="200">
+      <h3 class="text-xl font-bold text-gray-900 dark:text-white mb-2">Managing Government Business</h3>
+      <p class="text-gray-700 dark:text-gray-300">Led internal systems to support government lending programs like NRLM, NULM, and SHG. Improved PSL tracking and SMF categorization.</p>
+      <p class="mt-2 font-semibold text-gray-900 dark:text-white">Outcome:</p>
+      <p class="text-gray-700 dark:text-gray-300">Helped the bank stay compliant with RBI PSL mandates and reduce manual intervention.</p>
+    </div>
+
+    <div class="bg-white dark:bg-gray-800 p-6 rounded-2xl shadow-lg transform transition duration-300 hover:shadow-2xl hover:scale-[1.02]" data-aos="fade-up" data-aos-delay="300">
+      <h3 class="text-xl font-bold text-gray-900 dark:text-white mb-2">Product Strategy at AIC-IL</h3>
+      <p class="text-gray-700 dark:text-gray-300">Developed a product strategy for a cold-chain agri supply chain startup. Conducted market research, built customer personas, and refined business and revenue models to align with rural supply chain needs.</p>
+      <p class="mt-2 font-semibold text-gray-900 dark:text-white">Outcome:</p>
+      <p class="text-gray-700 dark:text-gray-300">Enabled fundraising and product-market fit in the institutional buyer segment.</p>
+    </div>
+
+  </div>
+</section>
+
 
       <section id="affiliations" data-aos="fade-up">
         <h2 class="text-3xl font-bold mb-6">Industry Affiliations</h2>
