--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
           <a href="#resume">Resume</a>
         </div>
         <button id="theme-toggle" class="bg-gray-800 text-white px-4 py-2 rounded-full hover:bg-gray-700 transition flex items-center">
-          <span id="theme-icon" class="material-icons">dark_mode</span>
+          <span id="theme-icon" class="material-icons"></span>
           <span class="ml-2">Toggle Theme</span>
         </button>
       </div>
